fix scrollbar

--- a/source/styles/components/_wpsl.scss
+++ b/source/styles/components/_wpsl.scss
@@ -91,8 +91,8 @@
 		width: $f;
 		@include normalize_padding;
 		@include breakpoint($bp) {
-			margin-right: percentage(20px/1207px) !important;
-			width: 50% - $m !important;
+			//margin-right: percentage(20px/1207px) !important;
+			width: 50% !important;
 		}
 		li {
 			border-bottom: 0;
